--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
+    "expo-font": "^11.6.0",
     "expo-status-bar": "^1.7.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.7.4",
